--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			</div>
 			<div class="container" id="summaryDiv">
 				<h2>Summary</h2>
+				<a href="#" id="hideBtn">back</a> 
 				<table class="table table-sm table-striped">
 					<thead>
 						<tr>
@@ -102,7 +103,7 @@
 					<tbody id="summaryTable">
 					</tbody>
 				</table>
-				<a href="#" id="hideBtn">back</a>
+				<a href="https://docs.google.com/spreadsheets/d/1uNi8Oys06R6kFpzOadpxURRzkEzm0xQ6cLFn9pTP2eY/edit?usp=drive_link" target="_blank">Open sheet</a>
 			</div>
 		</div>
 			
