--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<select class="form-select" id="type" name="type" title="Record Type"></select>
 					</div>
 					<div class="col">
-						<input type="submit" value="Submit" class="btn btn-primary">
+						<input type="submit" value="Add" class="btn btn-primary">
 						<!--<input type="reset" value="Reset" class="btn btn-secondary">-->
 					</div>
 				</div>
@@ -32,8 +32,23 @@
 
 			<div class="container" id="detailsDiv">
 				<div class="row">
-					<div class="col">
+<!--					<div class="col">
 						<h2 id="total"> </h2>
+					</div>-->
+					<div class="col">
+						<h3>Audit Tasks</h3>
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="envelopesEmpty">
+							<label class="form-check-label" for="envelopesEmpty">Confirm all envelopes are empty</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="envelopeDetails">
+							<label class="form-check-label" for="envelopeDetails">Enter all envelope details</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="sendAudit">
+							<label class="form-check-label" for="sendAudite"><a href="mailto:jwdafoe@gmail.com?subject=LVBC giving audit &body=summary goes here.">Submit (email) audit details</a></label>
+						</div>
 					</div>
 					<div class="col-3">
 						<button type="button" id="clearBtn" class="btn btn-danger">Clear all</button>
@@ -43,7 +58,7 @@
 				<hr>
 				<small>
 				<div class="row">
-					<div class="col text-bg-info" style="--bs-bg-opacity: .5;">
+<!--					<div class="col text-bg-info" style="--bs-bg-opacity: .5;">
 						<h4>Loose Checks</h4>
 						<ul class="list-group" id="checkSheet"></ul>
 						<table class="table table-sm">
@@ -56,7 +71,7 @@
 							<tbody id="checkTable">
 							</tbody>
 						</table>
-					</div>
+					</div> -->
 					<div class="col text-bg-danger" style="--bs-bg-opacity: .5;">
 						<h4>Pink Envs</h4>
 						<ul class="list-group" id="pinkSheet"></ul>
@@ -103,7 +118,7 @@
 					<tbody id="summaryTable">
 					</tbody>
 				</table>
-				<a href="https://docs.google.com/spreadsheets/d/1uNi8Oys06R6kFpzOadpxURRzkEzm0xQ6cLFn9pTP2eY/edit?usp=drive_link" target="_blank">Open sheet</a>
+<!--				<a href="https://docs.google.com/spreadsheets/d/1uNi8Oys06R6kFpzOadpxURRzkEzm0xQ6cLFn9pTP2eY/edit?usp=drive_link" target="_blank">Open sheet</a>-->
 			</div>
 		</div>
 			
