--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</div>
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" value="" id="sendAudit" disabled>
-						<label class="form-check-label" for="sendAudite"><a href="mailto:jwdafoe@gmail.com?subject=LVBC giving audit &body=summary goes here.">Click here to email audit details</a></label>
+						<label class="form-check-label" for="sendAudit"><a href="mailto:jwdafoe@gmail.com?subject=LVBC giving audit &body=summary goes here.">Click here to email audit details</a></label>
 					</div>
 				</div>
 				
