--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</div>
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" value="" id="sendAudit" disabled>
-						<label class="form-check-label" for="sendAudit"><a href="mailto:jwdafoe@gmail.com?subject=LVBC giving audit &body=summary goes here.">Click here to email audit details</a></label>
+						<label class="form-check-label" for="sendAudit"><a href="#" id="sendIt">Click here to email audit details</a></label>
 					</div>
 				</div>
 				
@@ -110,7 +110,7 @@
 			<div class="container" id="summaryDiv">
 				<h2>Summary</h2>
 				<a href="#" id="hideBtn">back</a> 
-				<table class="table table-sm table-striped">
+				<table class="table table-sm">
 					<thead>
 						<tr>
 							<th>ID or Name</th>
