--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 	<head>
 
@@ -34,96 +34,88 @@
 						<label class="form-check-label" for="envelopesFile">Place envelopes in box (next to safe)</label>
 					</div>
 				</div>
-				
 			</div>
 			<hr>
+			<form id="entryForm" action="javascript:void (0);">
+				<div class="row mb-3">
+					<div class="col">
+						<label for="batchDate" class="form-label">Batch date:</label>
+						<input class="form-control" type="date" id="batchDate" name="batchDate" required/>
+					</div>
+					<div class="col">
+						<label for="type" class="form-label">Type:</label>
+						<select class="form-select" id="type" name="type" title="Record Type"></select>
+					</div>
+<!--					<div class="col">
+						<input type="submit" value="Add" class="btn btn-primary">
+					</div>-->
+				</div>
+			</form>				
+			<hr>
+		</div>
 
-			<div class="container" id="detailsDiv">
-				<form id="entryForm" action="javascript:void (0);">
-					<div class="row mb-3">
-						<div class="col">
-							<label for="batchDate" class="form-label">Batch date:</label>
-							<input class="form-control" type="date" id="batchDate" name="batchDate" required/>
-						</div>
-						<div class="col">
-							<label for="type" class="form-label">Type:</label>
-							<select class="form-select" id="type" name="type" title="Record Type"></select>
-						</div>
-	<!--					<div class="col">
-							<input type="submit" value="Add" class="btn btn-primary">
-						</div>-->
-					</div>
-				</form>
-				<hr>
-				<div class="row">
+		<div class="container" id="detailsDiv">
+			<div class="row">
 <!--					<div class="col text-bg-info" style="--bs-bg-opacity: .5;">
-						<h4>Loose Checks</h4>
-						<ul class="list-group" id="checkSheet"></ul>
-						<table class="table table-sm">
-							<thead>
-								<tr>
-									<th>ID or Name</th>
-									<th class="text-end">Amount</th>
-								</tr>
-							</thead>
-							<tbody id="checkTable">
-							</tbody>
-						</table>
-					</div> -->
-					<div class="col text-bg-danger" style="--bs-bg-opacity: .5;">
+					<h4>Loose Checks</h4>
+					<ul class="list-group" id="checkSheet"></ul>
+					<table class="table table-sm">
+						<thead>
+							<tr>
+								<th>ID or Name</th>
+								<th class="text-end">Amount</th>
+							</tr>
+						</thead>
+						<tbody id="checkTable">
+						</tbody>
+					</table>
+				</div> -->
+				<div class="col text-bg-danger" style="--bs-bg-opacity: .5;">
 <!--						<h4>Pink Envs</h4>-->
-						<ul class="list-group" id="pinkSheet"></ul>
-						<table class="table table-sm">
-							<thead>
-								<tr>
-									<th>ID/Name</th>
-									<th class="text-end">Amount</th>
-								</tr>
-							</thead>
-							<tbody id="pinkTable">
-							</tbody>
-						</table>
-					</div>
-					<div class="col text-bg-warning" style="--bs-bg-opacity: .5;">
+					<ul class="list-group" id="pinkSheet"></ul>
+					<table class="table table-sm">
+						<thead>
+							<tr>
+								<th>ID/Name</th>
+								<th class="text-end">Amount</th>
+							</tr>
+						</thead>
+						<tbody id="pinkTable">
+						</tbody>
+					</table>
+				</div>
+				<div class="col text-bg-warning" style="--bs-bg-opacity: .5;">
 <!--						<h4>Yellow Envs</h4>-->
-						<ul class="list-group" id="yellowSheet"></ul>
-						<table class="table table-sm">
-							<thead>
-								<tr>
-									<th>ID #</th>
-									<th class="text-end">Amount</th>
-								</tr>
-							</thead>
-							<tbody id="yellowTable">
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col">
-						<a href="#" id="summaryBtn">Summary</a>
-					</div>
-					<div class="col">
-						<button type="button" id="clearBtn" class="btn btn-danger float-end">Clear all</button>
-					</div>
+					<ul class="list-group" id="yellowSheet"></ul>
+					<table class="table table-sm">
+						<thead>
+							<tr>
+								<th>ID #</th>
+								<th class="text-end">Amount</th>
+							</tr>
+						</thead>
+						<tbody id="yellowTable">
+						</tbody>
+					</table>
 				</div>
 			</div>
-			<div class="container" id="summaryDiv">
-				<h2>Summary</h2>
-				<a href="#" id="hideBtn">back</a> 
-				<table class="table table-sm">
-					<thead>
-						<tr>
-							<th>ID or Name</th>
-							<th class="text-end">Amount</th>
-						</tr>
-					</thead>
-					<tbody id="summaryTable">
-					</tbody>
-				</table>
+			<br>
+			<button type="button" id="clearBtn" class="btn btn-danger float-end">Clear all</button>
+		</div>
+		<div class="container" id="summaryDiv">
+			<h2>Summary</h2>
+			<a href="#" id="hideBtn">back</a> 
+			<table class="table table-sm">
+				<thead>
+					<tr>
+						<th>ID or Name</th>
+						<th class="text-end">Amount</th>
+					</tr>
+				</thead>
+				<tbody id="summaryTable">
+				</tbody>
+			</table>
 <!--				<a href="https://docs.google.com/spreadsheets/d/1uNi8Oys06R6kFpzOadpxURRzkEzm0xQ6cLFn9pTP2eY/edit?usp=drive_link" target="_blank">Open sheet</a>-->
-			</div>
 		</div>
 			
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
