--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 						<label class="form-check-label" for="envelopeDetails">Enter envelope details below</label>
 					</div>
 					<div class="form-check">
-						<input class="form-check-input" type="checkbox" value="" id="sendAudit" disabled>
-						<label class="form-check-label" for="sendAudit"><a href="#" id="sendIt">Click here to email audit details</a></label>
+						<input class="form-check-input" type="checkbox" value="" id="sendAudit">
+						<label class="form-check-label" for="sendAudit">Transfer records to audit file</label>
 					</div>
 					<div class="form-check">
-						<input class="form-check-input" type="checkbox" value="" id="envelopesFile" disabled>
+						<input class="form-check-input" type="checkbox" value="" id="envelopesFile">
 						<label class="form-check-label" for="envelopesFile">Place envelopes in box (next to safe)</label>
 					</div>
 				</div>
@@ -56,6 +56,23 @@
 
 		<div class="container" id="detailsDiv">
 			<div class="row">
+				<div class="col">
+					<h4>Summary</h4>
+					<ul class="list-group" id="summarySheet"></ul>
+					<table class="table table-sm">
+						<thead>
+							<tr>
+								<th>Date</th>
+								<th>Type</th>
+								<th>ID / Name</th>
+								<th class="text-end">Amount</th>
+							</tr>
+						</thead>
+						<tbody id="summaryTable">
+						</tbody>
+					</table>
+					<button type="button" id="clearBtn" class="btn btn-danger float-end">Clear all</button>
+				</div>
 <!--					<div class="col text-bg-info" style="--bs-bg-opacity: .5;">
 					<h4>Loose Checks</h4>
 					<ul class="list-group" id="checkSheet"></ul>
@@ -69,9 +86,9 @@
 						<tbody id="checkTable">
 						</tbody>
 					</table>
-				</div> -->
+				</div>
 				<div class="col text-bg-danger" style="--bs-bg-opacity: .5;">
-<!--						<h4>Pink Envs</h4>-->
+						<h4>Pink Envs</h4>
 					<ul class="list-group" id="pinkSheet"></ul>
 					<table class="table table-sm">
 						<thead>
@@ -85,7 +102,7 @@
 					</table>
 				</div>
 				<div class="col text-bg-warning" style="--bs-bg-opacity: .5;">
-<!--						<h4>Yellow Envs</h4>-->
+						<h4>Yellow Envs</h4>
 					<ul class="list-group" id="yellowSheet"></ul>
 					<table class="table table-sm">
 						<thead>
@@ -100,7 +117,7 @@
 				</div>
 			</div>
 			<br>
-			<button type="button" id="clearBtn" class="btn btn-danger float-end">Clear all</button>
+
 		</div>
 		<div class="container" id="summaryDiv">
 			<h2>Summary</h2>
@@ -115,7 +132,7 @@
 				<tbody id="summaryTable">
 				</tbody>
 			</table>
-<!--				<a href="https://docs.google.com/spreadsheets/d/1uNi8Oys06R6kFpzOadpxURRzkEzm0xQ6cLFn9pTP2eY/edit?usp=drive_link" target="_blank">Open sheet</a>-->
+				<a href="https://docs.google.com/spreadsheets/d/1uNi8Oys06R6kFpzOadpxURRzkEzm0xQ6cLFn9pTP2eY/edit?usp=drive_link" target="_blank">Open sheet</a>-->
 		</div>
 			
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
