--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 						<tbody id="summaryTable">
 						</tbody>
 					</table>
+					<button type="button" id="copyBtn"class="btn btn-secondary">Copy</button>
 					<button type="button" id="clearBtn" class="btn btn-danger float-end">Clear all</button>
 				</div>
 		</div>
